[gd_scene load_steps=47 format=3 uid="uid://btvr2gykt5ai5"]

[ext_resource type="Script" path="res://protag.gd" id="1_qmxm1"]
[ext_resource type="Texture2D" uid="uid://dd1souw4u2mra" path="res://Legacy-Fantasy - High Forest 2.3/Character/Attack-01/Attack-01-Sheet.png" id="2_6c3cd"]
[ext_resource type="Texture2D" uid="uid://djlh3ijvqcy5d" path="res://Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png" id="2_xnoro"]
[ext_resource type="Texture2D" uid="uid://dk67qbqil0lyg" path="res://Legacy-Fantasy - High Forest 2.3/Character/Jumlp-All/Jump-All-Sheet.png" id="4_qshnd"]
[ext_resource type="Texture2D" uid="uid://cefuj1p4mqvp" path="res://Legacy-Fantasy - High Forest 2.3/Character/Run/Run-Sheet.png" id="4_t3n7v"]
[ext_resource type="AudioStream" uid="uid://bfjy570ftuinj" path="res://CharacterSFX/footstep_grass_000.ogg" id="5_qg1jl"]
[ext_resource type="AudioStream" uid="uid://b4qnnbq1d3uj1" path="res://CharacterSFX/SFX_Jump_09.wav" id="6_k755g"]
[ext_resource type="AudioStream" uid="uid://cflw8rh60qyjq" path="res://CharacterSFX/Sword2.wav" id="8_lmahl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_848ey"]
size = Vector2(19.25, 47)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s5a7h"]
radius = 11.0
height = 50.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ntbbx"]
atlas = ExtResource("2_6c3cd")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlxdc"]
atlas = ExtResource("2_6c3cd")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p08mq"]
atlas = ExtResource("2_6c3cd")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xbp0"]
atlas = ExtResource("2_6c3cd")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi0ql"]
atlas = ExtResource("2_6c3cd")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3egh"]
atlas = ExtResource("2_6c3cd")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p7w4"]
atlas = ExtResource("2_6c3cd")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_whtvm"]
atlas = ExtResource("2_6c3cd")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_04ico"]
atlas = ExtResource("4_qshnd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlt4x"]
atlas = ExtResource("4_qshnd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgajv"]
atlas = ExtResource("4_qshnd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shovo"]
atlas = ExtResource("4_qshnd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0aml"]
atlas = ExtResource("4_qshnd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysdpi"]
atlas = ExtResource("4_qshnd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydo26"]
atlas = ExtResource("4_qshnd")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1rsd"]
atlas = ExtResource("4_qshnd")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfpam"]
atlas = ExtResource("4_qshnd")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wlve"]
atlas = ExtResource("4_qshnd")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qixsd"]
atlas = ExtResource("4_qshnd")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvhov"]
atlas = ExtResource("4_qshnd")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue7uf"]
atlas = ExtResource("4_qshnd")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u21oh"]
atlas = ExtResource("4_qshnd")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5xpl"]
atlas = ExtResource("4_qshnd")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omue6"]
atlas = ExtResource("2_xnoro")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_daf2g"]
atlas = ExtResource("2_xnoro")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oexhn"]
atlas = ExtResource("2_xnoro")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbdb5"]
atlas = ExtResource("2_xnoro")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hor2e"]
atlas = ExtResource("4_t3n7v")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vill5"]
atlas = ExtResource("4_t3n7v")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf1l4"]
atlas = ExtResource("4_t3n7v")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o20u5"]
atlas = ExtResource("4_t3n7v")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnb88"]
atlas = ExtResource("4_t3n7v")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaa4f"]
atlas = ExtResource("4_t3n7v")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahehj"]
atlas = ExtResource("4_t3n7v")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yff8"]
atlas = ExtResource("4_t3n7v")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwrcg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntbbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlxdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p08mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xbp0")
}],
"loop": false,
"name": &"AttackDown",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi0ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3egh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p7w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whtvm")
}],
"loop": false,
"name": &"AttackUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04ico")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlt4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgajv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shovo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0aml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysdpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydo26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1rsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfpam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wlve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qixsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvhov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue7uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u21oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5xpl")
}],
"loop": false,
"name": &"FullJump",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omue6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daf2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oexhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbdb5")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hor2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vill5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf1l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o20u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnb88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaa4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahehj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yff8")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}]

[node name="Protag" type="CharacterBody2D"]
position = Vector2(59, 565)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_qmxm1")

[node name="AtkBox" type="Area2D" parent="."]
process_mode = 4
collision_layer = 2
collision_mask = 2

[node name="HitBoxCol" type="CollisionShape2D" parent="AtkBox"]
position = Vector2(22.375, 1)
shape = SubResource("RectangleShape2D_848ey")
debug_color = Color(0, 0.6, 0.701961, 0.521569)

[node name="ProtagCol" type="CollisionShape2D" parent="."]
process_mode = 3
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_s5a7h")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -132)
zoom = Vector2(1.5, 1.5)
limit_top = 215
limit_bottom = 647
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_top_margin = 1.0
drag_bottom_margin = 1.0

[node name="ProtagSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qwrcg")
animation = &"Idle"

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qg1jl")

[node name="FootstepsTimer" type="Timer" parent="."]
wait_time = 0.333
autostart = true

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k755g")

[node name="Sword2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lmahl")

[connection signal="body_entered" from="AtkBox" to="." method="_on_atk_box_body_entered"]
[connection signal="animation_finished" from="ProtagSprite" to="." method="_on_protag_sprite_animation_finished"]
[connection signal="timeout" from="FootstepsTimer" to="." method="_on_footsteps_timer_timeout"]
